--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ asyncio = "^3.4.3"
 pygeoif = "^1.5.0"
 starlette = "^0.46.1"
 uvicorn = "^0.34.1"
-py-de-logging = { path = "/Users/prayag/playground/dump/py-de-logging" }
+python-json-logger = "^3.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pystac-client = "^0.8.5"
